# malasim-v6-SURF

./: .gitignore  AGENTS.md  CHANGELOG-6.1.md  profile_input.yml
src/: CMakeLists.txt
src/Configuration/: Config.cpp  Config.h  EpidemiologicalParameters.h  GenotypeParameters.cpp  GenotypeParameters.h  ImmuneSystemParameterCandidates.h  ImmuneSystemParameterOverrides.h  ImmuneSystemParameters.h  MovementSettings.h  SMCReporterSettings.h  StrategyParameters.cpp  StrategyParameters.h  TherapyParameters.h
src/Configuration/SpatialSettings/: LocationBasedProcessor.cpp  SpatialSettings.h
src/Core/: types.h
src/Events/: BirthdayEvent.h  CirculateToTargetLocationNextDayEvent.h  EndClinicalEvent.h  Event.h  MatureGametocyteEvent.h  MoveParasiteToBloodEvent.cpp  MoveParasiteToBloodEvent.h  ProgressToClinicalEvent.cpp  ProgressToClinicalEvent.h  README.md  RaptEvent.h  ReceiveMDATherapyEvent.h  ReceiveSMCTherapyEvent.cpp  ReceiveSMCTherapyEvent.h  ReceiveTherapyEvent.h  ReportTreatmentFailureDeathEvent.h  ReturnToResidenceEvent.h  SwitchImmuneComponentEvent.cpp  SwitchImmuneSystemModeEvent.h  TestTreatmentFailureEvent.h  UpdateWhenDrugIsPresentEvent.h
src/Events/Environment/: EnvironmentEventBuilder.cpp  README.md  UpdateEcozoneEvent.hxx
src/Events/Population/: AnnualBetaUpdateEvent.hxx  AnnualCoverageUpdateEvent.hxx  ChangeCirculationPercentEvent.hxx  ChangeInterruptedFeedingRateEvent.cpp  ChangeInterruptedFeedingRateEvent.h  ChangeMutationMaskEvent.cpp  ChangeMutationMaskEvent.h  ChangeMutationProbabilityPerLocusEvent.cpp  ChangeMutationProbabilityPerLocusEvent.h  ChangeTreatmentCoverageEvent.cpp  ChangeTreatmentCoverageEvent.h  ChangeTreatmentStrategyEvent.cpp  ChangeTreatmentStrategyEvent.h  ChangeWithinHostInducedFreeRecombinationEvent.cpp  ChangeWithinHostInducedFreeRecombinationEvent.h  DistrictImportationDailyEvent.cpp  DistrictImportationDailyEvent.h  ImportationEvent.cpp  ImportationEvent.h  ImportationPeriodicallyEvent.cpp  ImportationPeriodicallyEvent.h  ImportationPeriodicallyRandomEvent.cpp  ImportationPeriodicallyRandomEvent.h  Introduce580YMutantEvent.cpp  Introduce580YMutantEvent.h  IntroduceAmodiaquineMutantEvent.cpp  IntroduceAmodiaquineMutantEvent.h  IntroduceLumefantrineMutantEvent.cpp  IntroduceLumefantrineMutantEvent.h  IntroduceMutantEvent.hxx  IntroduceMutantEventBase.cpp  IntroduceMutantEventBase.h  IntroduceMutantRasterEvent.hxx  IntroduceParasitesPeriodicallyEventV2.cpp  IntroduceParasitesPeriodicallyEventV2.h  IntroducePlas2CopyParasiteEvent.cpp  IntroducePlas2CopyParasiteEvent.h  IntroduceTripleMutantToDPMEvent.cpp  IntroduceTripleMutantToDPMEvent.h  ModifyNestedMFTEvent.cpp  (+14 more)
src/Events/Trials/: ClinicalStudy.cpp  ClinicalStudy.h  README.md
src/MDC/: ModelDataCollector.cpp  ModelDataCollector.h
src/Mosquito/: Mosquito.cpp  Mosquito.h
src/Parasites/: Genotype.cpp  Genotype.h  GenotypeDatabase.cpp
src/Population/: ClonalParasitePopulation.cpp  DrugsInBlood.h  Population.cpp  Population.h  README.md  SingleHostClonalParasitePopulations.cpp  SingleHostClonalParasitePopulations.h
src/Population/ImmuneSystem/: ImmuneComponent.cpp  ImmuneComponent.h  ImmuneSystem.cpp  ImmuneSystem.h  ImmuneSystemConstants.h  InfantImmuneComponent.cpp  InfantImmuneComponent.h  NonInfantImmuneComponent.cpp  NonInfantImmuneComponent.h  README.md
src/Reporters/: Reporter.cpp  Reporter.h  SMCReporter.cpp  SMCReporter.h  SQLiteDbReporter.cpp  SQLiteDbReporter.h  SQLiteMonthlyReporter.cpp  SQLiteMonthlyReporter.h
src/Simulation/: Model.cpp  Model.h
src/Treatment/: ITreatmentCoverageModel.cpp  ITreatmentCoverageModel.h
src/Utils/: Cli.h  Random.h
src/malasim/: main.cpp
(+695 files in other folders)
